--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/nodemailer": "^7.0.1",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "framer-motion": "^12.23.16",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
+    "nodemailer": "^7.0.6",
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "resend": "^6.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.13",
