--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/node": "24.5.2",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
+    "critters": "^0.0.23",
     "tailwindcss": "^4.1.13",
     "typescript": "^5.9.2"
   }
