fixed some layouts

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "critters": "^0.0.23",
+    "puppeteer": "^24.25.0",
     "tailwindcss": "^4.1.13",
     "typescript": "^5.9.2"
   }
