--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "@vercel/speed-insights": "^1.2.0",
     "framer-motion": "^12.23.16",
     "lucide-react": "^0.544.0",
-    "next": "15.5.3",
+    "next": "^15.5.7",
     "nodemailer": "^7.0.6",
     "postcss": "^8.5.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-icons": "^5.5.0",
     "resend": "^6.1.0"
   },
